<resources>
    <string name="app_name">MyNotes</string>
    <string name="notes">MyNotes </string>
    <string name="search">Search your notes </string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_permission_text">This app needs access to your storage</string>
    <string name="notes_title" >Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="Add_Web">Add Web Link</string>
    <string name="Add_Image">Add Image</string>
    <string name="web_url" >Enter Web Url</string>
    <string name="Cancel">Cancel </string>
    <string name="Ok">Ok</string>
    <string name="delete">Delete Note</string>

</resources>