<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:context=".CreateNoteFragment">


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <ImageView
            android:id="@+id/imgDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_check_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="88dp"
            android:background="@null"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/notes_title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBack" />


        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTime">


            <View
                android:id="@+id/colorView"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorBlue" />

            <EditText
                android:id="@+id/etNoteSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/notes_sub_title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <EditText
            android:id="@+id/etNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/notes_desc"
            android:inputType="textMultiLine"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWebLink" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="Date"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toStartOf="@+id/l1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoteTitle" />


        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="4dp"
            android:contentDescription="TODO"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l1"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llayoutWebUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgNote">

            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="318dp"
                android:layout_height="43dp"
                android:background="@null"
                android:ellipsize="end"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:text="http://"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:background="@color/colorAccent"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnOk"
                app:layout_constraintTop_toBottomOf="@+id/etWebLink" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                android:text="@string/Ok"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etWebLink" />

            <ImageView
                android:id="@+id/imgDeleteUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:autoLink="web"
            android:fontFamily="sans-serif-condensed"
            android:padding="@dimen/_10sdp"
            android:text="www.google.com"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llayoutWebUrl" />

        <ImageView
            android:id="@+id/deleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_delete_outline_24"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l1" />

        <ImageView

            android:id="@+id/imageMore"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_more"
            app:layout_constraintTop_toBottomOf="@id/etNoteDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorWhite" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>