<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/Add_Image"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/layoutImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWebUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/layoutImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_link"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/webTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/Add_Web"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/layoutImage2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/deleteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutWebUrl">

        <ImageView

            android:id="@+id/deleteNoteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_outline_24"
            app:tint="@color/colorWhite" />

        <TextView

            android:id="@+id/deleteNoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/delete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/deleteNoteIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_more"
            app:tint="@color/colorWhite" />
    </FrameLayout>

    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view1"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_1"

                />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view2"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_2"

                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view3"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_3"

                />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view4"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_4"

                />

            <ImageView
                android:id="@+id/imageView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view5"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_5"

                />

            <ImageView
                android:id="@+id/imageView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view6"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_6"

                />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewC">

            <View
                android:id="@+id/view7"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:foreground="@drawable/note_color_7"

                />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorWhite" />


        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingEnd="@dimen/_10sdp"
            android:text="Pick Color"
            android:textAlignment="textEnd"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>